# SpilledAndroid

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/cpp/: CMakeLists.txt  OpenCV_Func.cpp  Test.cpp  testcpp.cpp  testcpp.h
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_up.xml
app/src/main/res/drawable/: aboutus.xml  back_button1024h.xml  blood.xml  blood_1_.xml  book_now.xml  button_background.xml  circle.xml  custom.xml  custom120h.xml  custom_add_button.xml  gradient.xml  gradient_fill.xml  holding_hands.xml  information_knapp1024h.xml  kamera_knapp1024h.xml  knapp.xml  liquid.xml  loading_screen2796h.xml  new_homescreen2796_1_.xml  oil.xml  oil_1_.xml  rectangle.xml  rectangle_1.xml  rectangle_16.xml  rounded_button_background.xml  settings_knapp1024h.xml  sitting_4.xml  sitting_8.xml  standing_10.xml  standing_18.xml  step_1.xml  step_2.xml  step_3.xml  transparent_image.xml  unit.xml  water.xml  water120h.xml
app/src/main/res/font/: yusei_magic.xml
app/src/main/res/layout/: aboutus.xml  activity_main.xml  activity_tutorial.xml  area_of_blood.xml  bottom_sheet_unit_select.xml  captured_image_view.xml  choose_blood.xml  choose_liquid.xml  choose_unit.xml  click_reference_page.xml  confirm_blood.xml  confirm_reference.xml  display_image.xml  (+13 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
(+19 files in other folders)
